testTask: add calculating of best period to analytics
