# lab/testTask/src/main/java/shift/sellersandtransactions/api/dto/BestPeriodResponseDto.java
@@ -1,0 +1,11 @@
+package shift.sellersandtransactions.api.dto;
+
+import java.time.LocalDate;
+
+public record BestPeriodResponseDto(
+        Long sellerId,
+        int periodInDays,
+        LocalDate startDate,
+        LocalDate endDate,
+        int transactionCount
+) {}
